[package]

name = "eclectic"
version = "0.0.1"
authors = ["Andrew Paseltiner <apaseltiner@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/apasel422/eclectic"

[features]

default = ["collect_impls", "trie"]
collect_impls = ["collect", "compare"]

[dependencies.collect]

optional = true

[dependencies.compare]

optional = true

[dependencies.trie]

optional = true
