[package]

name = "eclectic"
version = "0.0.1"
authors = ["Andrew Paseltiner <apaseltiner@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/apasel422/eclectic"
repository = "https://github.com/apasel422/eclectic"
documentation = "https://apasel422.github.io/eclectic/eclectic"
keywords = ["collecton", "map", "set", "data-structure"]
description = "Experimental collection traits."

[features]

default = ["collect_impls", "trie"]
collect_impls = ["collect", "compare"]

[dependencies.collect]

optional = true

[dependencies.compare]

optional = true

[dependencies.trie]

optional = true
